--- a/views/home.ejs
+++ b/views/home.ejs
@@ -191,7 +191,7 @@
                                 </li>
                                 <!-- elements menu -->
                                <li class="menu-item-has-children">
-                                    <a href="/products">Industries</a>
+                                    <a href="/footwear_industry">Industries</a>
                                     <ul class="submenu last-children">
                                         <li><a href="/footwear_industry">Footwear Manufacturing</a></li>
                                     <li><a href="/industry_signage">Signage & Flex Board</a></li>
@@ -311,7 +311,7 @@
                                 </svg>
                             </div>
                             <div class="offcanvas-contact-text">
-                                <a href="#">Teraxo Industries, Bangalore, Karnataka, India</a>
+                                <a href="#">Teraxo Door No 4, Survey No 310, Ground Floor, Opp: Global Furnitures, Hulimangala Road, Hulimangala Post, Jigani Hobli, Anekal Taluk, Bengaluru, Karnataka 560105</a>
                             </div>
                         </li>
 
@@ -324,7 +324,7 @@
 
                             </div>
                             <div class="offcanvas-contact-text">
-                                <a href="tel:+919876543210">+91 98765 43210</a>
+                                <a href="tel:+918105077170">+91 81050 77170</a>
                             </div>
                         </li>
 
@@ -337,7 +337,7 @@
 
                             </div>
                             <div class="offcanvas-contact-text">
-                                <a href="mailto:info@teraxo.com">info@teraxo.com</a>
+                                <a href="mailto:Business@teraxo.co.in">Business@teraxo.co.in</a>
                             </div>
                         </li>
 
@@ -348,10 +348,10 @@
                 <div class="offcanvas-social">
                     <h4 class="offcanvas-title-meta">Follow Teraxo</h4>
                     <ul>
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                        <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=61572408505004"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://www.instagram.com/teraxoadhesive?igsh=MWM2ZmJoYThscmg3eg=="><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://youtube.com/@teraxoadhesive?si=sgscILyhuL_CdbCO"><i class="fab fa-youtube"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/teraxo-adhesive-7701ba347?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a></li>
                     </ul>
                 </div>
 
@@ -1696,8 +1696,8 @@
                                         <li><a href="industries.html">Industries</a></li>
                                         <li><a href="/blogs">Blog</a></li>
                                         <li><a href="/contact">Contact</a></li>
-                                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                                        <li><a href="terms.html">Terms of Use</a></li>
+                                        <li><a href="/privacy">Privacy Policy</a></li>
+                                        <li><a href="/terms">Terms of Use</a></li>
                                     </ul>
                                 </div>
                             </div>
