--- a/views/company-overview.ejs
+++ b/views/company-overview.ejs
@@ -70,41 +70,41 @@
                                 </li>
                                 <!-- about menu -->
                                 <li class="menu-item-has-children">
-                                    <a href="company-overview.html">About</a>
+                                    <a href="/company_overview">About</a>
                                     <ul class="submenu last-children">
-                                        <li><a href="company-overview.html">Company Overview</a></li>
-                                    <li><a href="why-choose.html">Why Teraxo </a></li>
+                                        <li><a href="/company_overview">Company Overview</a></li>
+                                    <li><a href="/why_choose_us">Why Teraxo </a></li>
                                     </ul>
                                 </li>
                                 <!-- page menu -->
                                   <li class="menu-item-has-children">
-                                    <a href="products.html">Products</a>
+                                    <a href="/products">Products</a>
                                     <ul class="submenu last-children">
-                                        <li><a href="products.html">All Products</a></li>
-                                    <li><a href="products.html">F40</a></li>
-                                    <li><a href="products.html">R40</a></li>
-                                    <li><a href="products.html">FX40</a></li>
-                                    <li><a href="products.html">W40</a></li>
-                                    <li><a href="products.html">G40</a></li>
+                                        <li><a href="/products">All Products</a></li>
+                                    <li><a href="/products">F40</a></li>
+                                    <li><a href="/products">R40</a></li>
+                                    <li><a href="/products">FX40</a></li>
+                                    <li><a href="/products">W40</a></li>
+                                    <li><a href="/products">G40</a></li>
                                     </ul>
                                 </li>
                                 <!-- elements menu -->
                           
    <li class="menu-item-has-children">
-                                    <a href="industry-footwear.html">Industries</a>
+                                    <a href="/footwear_industry">Industries</a>
                                     <ul class="submenu last-children">
-                                        <li><a href="industry-footwear.html">Footwear Manufacturing</a></li>
-                                    <li><a href="industry-signage.html">Signage & Flex Board</a></li>
-                                    <li><a href="industry-furniture.html">Furniture & Woodworking</a></li>
-                                    <li><a href="industry-interiors.html">Interiors & Modular Kitchen</a></li>
-                                    <li><a href="industry-automotive.html">Automotive</a></li>
-                                    <li><a href="industry-pvc.html">PVC & UPVC Fabrication</a></li>
-                                    <li><a href="industry-packaging.html">Packaging</a></li>
-                                    <li><a href="industry-handicrafts.html">Handicrafts & Toys</a></li>
+                                        <li><a href="/footwear_industry">Footwear Manufacturing</a></li>
+                                    <li><a href="/industry_signage">Signage & Flex Board</a></li>
+                                    <li><a href="/industry_furniture">Furniture & Woodworking</a></li>
+                                    <li><a href="/industry_interiors">Interiors & Modular Kitchen</a></li>
+                                    <li><a href="/industry_automotive">Automotive</a></li>
+                                    <li><a href="/industry_pvc">PVC & UPVC Fabrication</a></li>
+                                    <li><a href="/industry_packaging">Packaging</a></li>
+                                    <li><a href="/industry_handicrafts">Handicrafts & Toys</a></li>
                                     </ul>
                                 </li>
                                 <li class="">
-                                    <a href="blog.html">Blog</a>
+                                    <a href="/blogs">Blog</a>
                                
                                 </li>
                                 <li class="">
@@ -170,41 +170,41 @@
                                 </li>
                                 <!-- about menu -->
                                 <li class="menu-item-has-children">
-                                    <a href="company-overview.html">About</a>
+                                    <a href="/company_overview">About</a>
                                     <ul class="submenu last-children">
-                                  <li><a href="company-overview.html">Company Overview</a></li>
-                                    <li><a href="why-choose.html">Why Teraxo </a></li>
+                                  <li><a href="/company_overview">Company Overview</a></li>
+                                    <li><a href="/why_choose_us">Why Teraxo </a></li>
                                     </ul>
                                 </li>
                                 <!-- page menu -->
                          <li class="menu-item-has-children">
-                                    <a href="products.html">Products</a>
+                                    <a href="/products">Products</a>
                                     <ul class="submenu last-children">
-                                    <li><a href="products.html">All Products</a></li>
-                                    <li><a href="products.html">F40</a></li>
-                                    <li><a href="products.html">R40</a></li>
-                                    <li><a href="products.html">FX40</a></li>
-                                    <li><a href="products.html">W40</a></li>
-                                    <li><a href="products.html">G40</a></li>
+                                    <li><a href="/products">All Products</a></li>
+                                    <li><a href="/products">F40</a></li>
+                                    <li><a href="/products">R40</a></li>
+                                    <li><a href="/products">FX40</a></li>
+                                    <li><a href="/products">W40</a></li>
+                                    <li><a href="/products">G40</a></li>
                                     </ul>
                                 </li>
                                 <!-- elements menu -->
                                <li class="menu-item-has-children">
-                                    <a href="products.html">Industries</a>
+                                    <a href="/footwear_industry">Industries</a>
                                     <ul class="submenu last-children">
-                                        <li><a href="industry-footwear.html">Footwear Manufacturing</a></li>
-                                    <li><a href="industry-signage.html">Signage & Flex Board</a></li>
-                                    <li><a href="industry-furniture.html">Furniture & Woodworking</a></li>
-                                    <li><a href="industry-interiors.html">Interiors & Modular Kitchen</a></li>
-                                    <li><a href="industry-automotive.html">Automotive</a></li>
-                                    <li><a href="industry-pvc.html">PVC & UPVC Fabrication</a></li>
-                                    <li><a href="industry-packaging.html">Packaging</a></li>
-                                    <li><a href="industry-handicrafts.html">Handicrafts & Toys</a></li>
+                                        <li><a href="/footwear_industry">Footwear Manufacturing</a></li>
+                                    <li><a href="/industry_signage">Signage & Flex Board</a></li>
+                                    <li><a href="/industry_furniture">Furniture & Woodworking</a></li>
+                                    <li><a href="/industry_interiors">Interiors & Modular Kitchen</a></li>
+                                    <li><a href="/industry_automotive">Automotive</a></li>
+                                    <li><a href="/industry_pvc">PVC & UPVC Fabrication</a></li>
+                                    <li><a href="/industry_packaging">Packaging</a></li>
+                                    <li><a href="/industry_handicrafts">Handicrafts & Toys</a></li>
                                     </ul>
                                 </li>
 
                                 <li >
-                                    <a href="blog.html">Blog</a>
+                                    <a href="/blogs">Blog</a>
                                
                                 </li>
                                 <li >
@@ -309,7 +309,7 @@
                                 </svg>
                             </div>
                             <div class="offcanvas-contact-text">
-                                <a href="#">Teraxo Industries, Bangalore, Karnataka, India</a>
+                                <a href="#">Teraxo Door No 4, Survey No 310, Ground Floor, Opp: Global Furnitures, Hulimangala Road, Hulimangala Post, Jigani Hobli, Anekal Taluk, Bengaluru, Karnataka 560105</a>
                             </div>
                         </li>
 
@@ -322,7 +322,7 @@
 
                             </div>
                             <div class="offcanvas-contact-text">
-                                <a href="tel:+919876543210">+91 98765 43210</a>
+                                <a href="tel:+918105077170">+91 81050 77170</a>
                             </div>
                         </li>
 
@@ -335,7 +335,7 @@
 
                             </div>
                             <div class="offcanvas-contact-text">
-                                <a href="mailto:info@teraxo.com">info@teraxo.com</a>
+                                <a href="mailto:Business@teraxo.co.in">Business@teraxo.co.in</a>
                             </div>
                         </li>
 
@@ -346,10 +346,10 @@
                 <div class="offcanvas-social">
                     <h4 class="offcanvas-title-meta">Follow Teraxo</h4>
                     <ul>
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                        <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=61572408505004"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://www.instagram.com/teraxoadhesive?igsh=MWM2ZmJoYThscmg3eg=="><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://youtube.com/@teraxoadhesive?si=sgscILyhuL_CdbCO"><i class="fab fa-youtube"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/teraxo-adhesive-7701ba347?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a></li>
                     </ul>
                 </div>
 
@@ -1754,8 +1754,8 @@
                                         <li><a href="industries.html">Industries</a></li>
                                         <li><a href="/blogs">Blog</a></li>
                                         <li><a href="/contact">Contact</a></li>
-                                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                                        <li><a href="terms.html">Terms of Use</a></li>
+                                        <li><a href="/privacy">Privacy Policy</a></li>
+                                        <li><a href="/terms">Terms of Use</a></li>
                                     </ul>
                                 </div>
                             </div>
