--- a/views/admin/admin_testimonials.ejs
+++ b/views/admin/admin_testimonials.ejs
@@ -746,7 +746,7 @@
 
                         <!-- bottom-page -->
                         <div class="bottom-page">
-                            <div class="body-text">Copyright © 2025 <a href="">Blushely</a>.
+                            <div class="body-text">Copyright © 2025 <a href="">Teraxo</a>.
                                 Design by Trivlogic Private Limited All rights reserved</div>
                         </div>
                         <!-- /bottom-page -->
