--- a/views/home.ejs
+++ b/views/home.ejs
@@ -78,20 +78,12 @@
                                     </ul>
                                 </li>
                                 <!-- page menu -->
-                                  <li class="menu-item-has-children">
+                                  <li class="">
                                     <a href="/products">Products</a>
-                                    <ul class="submenu last-children">
-                                        <li><a href="/products">All Products</a></li>
-                                    <li><a href="/products">F40</a></li>
-                                    <li><a href="/products">R40</a></li>
-                                    <li><a href="/products">FX40</a></li>
-                                    <li><a href="/products">W40</a></li>
-                                    <li><a href="/products">G40</a></li>
-                                    </ul>
                                 </li>
                                 <!-- elements menu -->
                           
-   <li class="menu-item-has-children">
+                                  <li class="menu-item-has-children">
                                     <a href="/footwear_industry">Industries</a>
                                     <ul class="submenu last-children">
                                         <li><a href="/footwear_industry">Footwear Manufacturing</a></li>
@@ -171,23 +163,16 @@
                                 </li>
                                 <!-- about menu -->
                                 <li class="menu-item-has-children">
-                                    <a href="/company_overview">About</a>
+                                    <a href="/company_overview">About Teraxo</a>
                                     <ul class="submenu last-children">
                                   <li><a href="/company_overview">Company Overview</a></li>
                                     <li><a href="/why_choose_us">Why Teraxo </a></li>
                                     </ul>
                                 </li>
                                 <!-- page menu -->
-                         <li class="menu-item-has-children">
-                                    <a href="/products">Products</a>
-                                    <ul class="submenu last-children">
-                                    <li><a href="/products">All Products</a></li>
-                                    <li><a href="/products">F40</a></li>
-                                    <li><a href="/products">R40</a></li>
-                                    <li><a href="/products">FX40</a></li>
-                                    <li><a href="/products">W40</a></li>
-                                    <li><a href="/products">G40</a></li>
-                                    </ul>
+                         <li class="">
+                                    <a href="/products">Our Products</a>
+                                
                                 </li>
                                 <!-- elements menu -->
                                <li class="menu-item-has-children">
